--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.1",
+    "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.4.5",
+    "flux": "^3.1.2",
     "html-webpack-plugin": "^2.28.0",
+    "prop-types": "^0.2.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-google-login": "^2.8.9",
+    "react-router": "^2.0.0",
     "webpack": "^2.6.0"
   },
   "devDependencies": {
