--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv-webpack": "^1.4.5",
     "flux": "^3.1.2",
     "html-webpack-plugin": "^2.28.0",
+    "object-assign": "^4.1.1",
     "prop-types": "^0.2.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-google-login": "^2.8.9",
-    "react-router": "^2.0.0",
+    "react-router": "^2.5.2",
+    "superagent": "^3.5.2",
     "webpack": "^2.6.0"
   },
   "devDependencies": {
